<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bluetooth"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/title_bluetooth" />

    <item
        android:id="@+id/navigation_archivo"
        android:icon="@drawable/ic_storage_black_24dp"
        android:title="@string/title_archivo" />

    <item
        android:id="@+id/navigation_analizar"
        android:icon="@drawable/ic_hearth_black_24dp"
        android:title="@string/title_analizar"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_resultado"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_resultado" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_perfil" />

</menu>
